--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
           <form action="">
             <div class="element">
               <label for="cProgram"><strong>Programming in C:</strong></label>
-              <input type="range" id="cProgram" min="0" max="60">
+              <input type="range" id="cProgram" min="0" max="60" disabled />
             </div>
             <div class="element">
               <label for="C++"><strong>Programming in C++:</strong></label>
-              <input type="range" id="C++" min="0" max="70">
+              <input type="range" id="C++" min="0" max="70"  disabled />
             </div>
             <div class="element">
               <label for="Java"><strong>Java:</strong></label>
-              <input type="range" id="Java" min="0" max="60">
+              <input type="range" id="Java" min="0" max="60"  disabled />
             </div>
             <div class="element">
               <label for="Html"><strong>Html:</strong></label>
-              <input type="range" id="Html" min="0" max="80">
+              <input type="range" id="Html" min="0" max="80"  disabled />
             </div>
             <div class="element">
               <label for="Css"><strong>Css:</strong></label>
-              <input type="range" id="Css" min="0" max="80">
+              <input type="range" id="Css" min="0" max="80"  disabled />
             </div>
             <div class="element">
               <label for="JS"><strong>JavaScript:</strong></label>
-              <input type="range" id="JS" min="0" max="60">
+              <input type="range" id="JS" min="0" max="60"  disabled />
             </div>
           </form>
         </div>  
